k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-server
  namespace: anime
  labels:
    app: anime-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anime-server
  template:
    metadata:
      labels:
        app: anime-server
    spec:
      containers:
        - name: server
          image: fkvivid/anime-recommendation-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
