k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: anime
spec:
  selector:
    app: anime-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
