k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: anime-recommendation
spec:
  selector:
    app: anime-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
