k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-ingress
  namespace: anime
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: anime-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - anime.vividtemka.com
      secretName: app-tls-bhjmf
  rules:
    - host: anime.vividtemka.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: anime
spec:
  stripPrefix:
    prefixes:
      - /api
